--- a/Student/index.html
+++ b/Student/index.html
@@ -140,8 +140,9 @@
                 <div id="game">
                     <h2 style="background-color: #ee999a;">Check it out : A 2D Game</h2>
                     <p id="gamePara">
-                        <small>[The experience will definitely be better on a laptop or a computer, than on a mobile
-                            device]</small><br /><br />
+                        <small id="gameMessageForDevice" style="background-color:rgb(249, 243, 195);">[Using a laptop or
+                            a computer will definitely result in a better experience than using a mobile
+                            device.]</small><br /><br />
                         <button id="gameBtn" onclick="toGameScreen()" title="Go To 2D Game">PLAY GAME</button>
                     </p>
                 </div>
@@ -152,13 +153,13 @@
                     <h2>Why I think CS is a good career option...</h2>
                     <img id="csAsChoice" src="csAsChoice.jpg">
                     <p>
-                        I think it's an all in one package (not salary wise), where you can put your creative as well as
+                        I think it's an all-in-one package (not salary-wise), where you can put your creative as well as
                         logical skills to good use. The range of things that one can do in this field is quite vast,
                         like developing applications, building websites, interpreting complex data using various models,
                         and many more things. The part which I think is the best is that one can learn almost everything
-                        on their own and get better with a lot of practice. So if you're confused whether or not to get
-                        into this field, I would strongly suggest you do. And if you have anything tech related to talk
-                        about, feel free to <a href="#letsLearn">contact me</a>.<br /><br />
+                        on their own and get better with a lot of practice. So if you're confused about whether or not
+                        to get into this field, I would strongly suggest you do. And if you have anything tech-related
+                        to talk about, feel free to <a href="#letsLearn">contact me</a>.<br /><br />
                         Happy coding! 💻
                     </p>
                 </div>
