--- a/Game/Game.html
+++ b/Game/Game.html
@@ -64,7 +64,7 @@
         function backToPortfolio() {
             $(document).ready(function () {
                 setInterval(function () {
-                    history.go(-1);
+                    window.history.go(-1);
                 }, 300);
                 $('body').addClass('transitionOut');
             });
