--- a/Game/Game.html
+++ b/Game/Game.html
@@ -65,7 +65,7 @@
             $(document).ready(function () {
                 setInterval(function () {
                     // window.history.go(-1);
-                    window.history.back;
+                    window.history.back();
                 }, 300);
                 $('body').addClass('transitionOut');
             });
