--- a/Recruiter/index.html
+++ b/Recruiter/index.html
@@ -24,6 +24,11 @@
         .otherPage:focus {
             color: red;
         }
+
+        .transitionOut {
+            transform: translateX(-100%);
+            transition: 400ms;
+        }
     </style>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
