--- a/Game/Game.html
+++ b/Game/Game.html
@@ -64,8 +64,9 @@
         function backToPortfolio() {
             $(document).ready(function () {
                 setInterval(function () {
+                    window.history.go(-1); return false;
                     // window.history.go(-1);
-                    window.history.back();
+                    // window.history.back();
                 }, 300);
                 $('body').addClass('transitionOut');
             });
