--- a/Game/Game.html
+++ b/Game/Game.html
@@ -64,7 +64,8 @@
         function backToPortfolio() {
             $(document).ready(function () {
                 setInterval(function () {
-                    window.history.go(-1); return false;
+                    javascript: history.go(-1);
+                    // window.history.go(-1); return false;
                     // window.history.go(-1);
                     // window.history.back();
                 }, 300);
