--- a/Game/Game.html
+++ b/Game/Game.html
@@ -64,10 +64,7 @@
         function backToPortfolio() {
             $(document).ready(function () {
                 setInterval(function () {
-                    javascript: history.go(-1);
-                    // window.history.go(-1); return false;
-                    // window.history.go(-1);
-                    // window.history.back();
+                    window.history.go(-1);
                 }, 300);
                 $('body').addClass('transitionOut');
             });
