--- a/Recruiter/index.html
+++ b/Recruiter/index.html
@@ -230,6 +230,7 @@
         $(document).ready(function () {
             $('body').hide().fadeIn(300);
         });
+        sessionStorage.setItem('pageNo',1);
 
         function goToGame() {
             $(document).ready(function () {
