--- a/Student/index.html
+++ b/Student/index.html
@@ -193,6 +193,7 @@
                 setInterval(function () {
                     window.location = "../Game/Game.html";
                 }, 300);
+                sessionStorage.setItem('pageNo', 2);
                 $('body').addClass('transitionOut');
             });
         }
