--- a/Game/instructions.html
+++ b/Game/instructions.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>General instructions</title>
     <link rel="stylesheet" href="instrucCSS.css">
 </head>
 
@@ -12,14 +12,15 @@
     <div id="container">
         <h2>How To Play</h2>
         <ul>
-            <li>Move the player so as to avoid the obstacles coming in its way, to complete more levels.</li>
-            <li>You can either use the keyboard of your PC, or the virtual keys that have been provided.</li>
+            <li>Move the player (the hot-air balloon) to avoid the obstacles coming in its way, to complete
+                more levels.</li>
+            <li>You can either use the keyboard of your PC or the virtual keys that have been provided.</li>
             <li>The speed and count of obstacles will be increased with each level, increasing the difficulty of the
                 game.</li>
         </ul>
         <h2>General Instructions</h2>
         <ul>
-            <li>Turning the sound up is suggested, when playing on a PC.</li>
+            <li>Turning the sound up is suggested when playing on a PC.</li>
             <li>If you are using a mobile, the game might lag a bit, because of the load of the animation.</li>
         </ul>
         <button id="back" onClick="back()">Back To The Game</button>
