--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property='og:title' content='TITLE OF YOUR WEBSITE' />
+    <meta property='og:image' content='thumbnail.png' />
+    <meta property='og:description' content=' DESCRIPTION OF YOUR SITE' />
+    <meta property='og:url' content='URL OF YOUR WEBSITE' />
+    <meta property='og:image:width' content='1200' />
+    <meta property='og:image:height' content='627' />
+
     <title>Home</title>
     <link rel="stylesheet" href="transitionCSS.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
