--- a/index.html
+++ b/index.html
@@ -4,12 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property='og:title' content='TITLE OF YOUR WEBSITE' />
-    <meta property='og:image' content='thumbnail.png' />
-    <meta property='og:description' content=' DESCRIPTION OF YOUR SITE' />
-    <meta property='og:url' content='URL OF YOUR WEBSITE' />
-    <meta property='og:image:width' content='1200' />
-    <meta property='og:image:height' content='627' />
+    <meta property='og:title' content='Portfolio website' />
+    <meta name="image" property='og:image' content='thumbnail.png' />
+    <meta name="description" property='og:description' content='Portfolio website' />
+    <meta name="url" property='og:url' content='portfolio-website-sanjana-joshi.vercel.app' />
 
     <title>Home</title>
     <link rel="stylesheet" href="transitionCSS.css">
