--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property='og:title' content='Portfolio website' />
-    <meta name="image" property='og:image' content='thumbnail.png' />
-    <meta name="description" property='og:description' content='Portfolio website' />
-    <meta name="url" property='og:url' content='portfolio-website-sanjana-joshi.vercel.app' />
+    <meta name="title" content='Portfolio Website' />
+    <meta name="image" content='thumbnail.png' />
+    <meta name="description" content='Portfolio website' />
+    <meta name="url" content='portfolio-website-sanjana-joshi.vercel.app' />
+    <meta name="width" property="og:image:width" content='1200' />
+    <meta name="height" property="og:image:height" content='384' />
 
     <title>Home</title>
     <link rel="stylesheet" href="transitionCSS.css">
