--- a/Recruiter/index.html
+++ b/Recruiter/index.html
@@ -29,6 +29,29 @@
             transform: translateX(-100%);
             transition: 400ms;
         }
+
+
+        @keyframes appear {
+            0% {
+                opacity: 0;
+            }
+
+            25% {
+                opacity: 0.25;
+            }
+
+            50% {
+                opacity: 0.5;
+            }
+
+            75% {
+                opacity: 0.75;
+            }
+
+            100% {
+                opacity: 1;
+            }
+        }
     </style>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -230,7 +253,7 @@
         $(document).ready(function () {
             $('body').hide().fadeIn(300);
         });
-        sessionStorage.setItem('pageNo',1);
+        sessionStorage.setItem('pageNo', 1);
 
         function goToGame() {
             $(document).ready(function () {
