--- a/Student/index.html
+++ b/Student/index.html
@@ -11,6 +11,28 @@
             transform: translateX(-100%);
             transition: 400ms;
         }
+
+        @keyframes appear {
+            0% {
+                opacity: 0;
+            }
+
+            25% {
+                opacity: 0.25;
+            }
+
+            50% {
+                opacity: 0.5;
+            }
+
+            75% {
+                opacity: 0.75;
+            }
+
+            100% {
+                opacity: 1;
+            }
+        }
     </style>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
