--- a/Student/index.html
+++ b/Student/index.html
@@ -12,6 +12,31 @@
             transition: 400ms;
         }
 
+        h5 {
+            max-width: 100%;
+            text-align: center;
+            background-color: rgba(255, 255, 255, 0.57);
+        }
+
+        .otherPage {
+            width: max-content;
+            padding: 0;
+            background-color: white;
+            border: 0;
+            text-decoration: underline;
+            color: rgb(82, 36, 208);
+            margin: 0.3vw 0;
+        }
+
+        .otherPage:hover {
+            color: rgb(0, 105, 225);
+            cursor: pointer;
+        }
+
+        .otherPage:focus {
+            color: red;
+        }
+
         @keyframes appear {
             0% {
                 opacity: 0;
@@ -195,6 +220,14 @@
                     </p>
                 </div>
             </div>
+
+            <h5 style="margin: 0 auto; padding: 4vw; font-weight: 200;">
+                <big>Check these out</big><br />
+                1) <button title="Go to Recruiter page" class="otherPage"
+                    onclick="otherPage('../Recruiter/index.html')">'Recruiter'</button> page   
+                2) <button title="Go to Other page" class="otherPage"
+                    onclick="otherPage('../Other/index.html')">'Other'</button> page
+            </h5>
         </div>
     </div>
 
@@ -220,11 +253,25 @@
                 $('body').addClass('transitionOut');
             });
         }
-    </script>
 
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
+        function otherPage(pageURL) {
+            $(document).ready(function () {
+                $.ajax({
+                    url: `${pageURL}`,
+                    success: function () {
+
+                        setInterval(function () {
+                            window.location = `${pageURL}`;
+                        }, 1000);
+                        $('body').addClass('transitionOut');
+                    },
+                    error: function (jqXHR, err) {
+                        console.log("Error");
+                    }
+                });
+            });
+        }
+    </script>
 
     <script src="stuJS.js"></script>
 </body>
