--- a/Recruiter/index.html
+++ b/Recruiter/index.html
@@ -241,6 +241,9 @@
             <h5 class="footerH5" title="View image sources"><a href="Image_sources/index.html">Image sources</a></h5>
         </div>
     </footer>
+
+    <div id="toast">Email ID copied to clipboard</div>
+
     <script src="recJS.js"></script>
 
     <script>
