--- a/Student/index.html
+++ b/Student/index.html
@@ -231,6 +231,8 @@
         </div>
     </div>
 
+    <div id="toast">Email ID copied to clipboard</div>
+
     <script>
         document.querySelector("#hello").addEventListener('click', function () {
             document.getAnimations().forEach(function (anim) {
