--- a/Recruiter/index.html
+++ b/Recruiter/index.html
@@ -226,8 +226,8 @@
         <!-- This is the footer. -->
         <h3 id="footerTitle">You can reach out<br />to me via</h3>
         <div id="footerContainer">
-            <div id="gmail" style="max-width: fit-content;"><img id="gmailImg" src="gmail.png"
-                    title="Send me an e-mail"></div>
+            <div id="gmail" style="max-width: fit-content;"><a id="goToGmail"><img id="gmailImg" src="gmail.png"
+                        title="Send me an e-mail"></a></div>
             <div id="linkedIn" style="max-width: fit-content;"><img id="linkedInImg" src="linkedIn.png"
                     title="View my LinkedIn profile">
             </div>
