--- a/Student/index.html
+++ b/Student/index.html
@@ -108,7 +108,7 @@
         <div id="container">
             <div class="darkBack" style="padding-top: 10vw;">
                 <div id="letsLearn">
-                    <h2>Let's learn, build and grow together...</h2>
+                    <h2>Let's learn, build and grow<br />together...</h2>
                     <p>
                         Have interesting ideas 💡?
                         <br />Or just want to learn some new stuff?
@@ -121,7 +121,7 @@
                         <p style="grid-area: dropEmail; padding: 0;">Drop me an email 📧 : </p><a id="goToGmail"><button
                                 id="gmail"
                                 style="background-image: url('../Recruiter/gmail.png'); background-size: cover; grid-area: gmail;"
-                                title="Show email ID"></button></a>
+                                title="Copy email ID"></button></a>
                         <!-- <p style="grid-area: emailID;" id="emailID">sanjanajoshi2023@gmail.com</p> -->
                         <p style="grid-area: connect; padding: 0.1vw 0vw 3vw 0vw;">Let's connect 🔗 : </p><button
                             id="linkedIn"
@@ -207,7 +207,7 @@
 
             <div class="darkBack">
                 <div id="csAsOption">
-                    <h2>Why I think CS is a good career option...</h2>
+                    <h2>Why I think CS is a good<br />career option...</h2>
                     <img id="csAsChoice" src="csAsChoice.jpg">
                     <p>
                         I think it's an all-in-one package (not salary-wise), where you can put your creative as well as
