--- a/Recruiter/index.html
+++ b/Recruiter/index.html
@@ -104,7 +104,8 @@
                 <b style="color : #464646">•</b> Programming language : <i>Java</i><br />
                 <b style="color : #464646">•</b> Features : <i>3x3 and 4x4 grids, Dark mode, High score till date,
                     Customizable
-                    player names, Fun facts and tips on loading screen</i><br /><br />
+                    player names, Fun facts and tips on loading screen, User-friendly, Interactive
+                    design</i><br /><br />
                 <button class="toGitText">&#10147; Go to GitHub repository</button><button class="goToGithub"
                     onclick="toGitHub(1)" title="View code for TicTacToe"><img src="github.png" class="github"></button>
                 <button id="viewTicTacToe" title="View TicTacToe Project">View</button>
@@ -141,7 +142,8 @@
                     PostgreSQL</i><br />
                 <b style="color : #464646">•</b> Framework used : <i>Bootstrap</i><br />
                 <b style="color : #464646">•</b> Features : <i>Login/Sign up options, Image buttons, Easy to
-                    navigate, Availability of a lot of options under a specific domain</i><br />
+                    navigate, Availability of a lot of options under a specific domain such as Music, Sports, Food,
+                    Photography and Art</i><br />
                 <!-- <b style="color : #464646">•</b> About : <i>We have tried to include the things that are searched the
                     most related to the 5 most common hobby fields namely Art, Music, Sports, Food, Photography under a
                     single domain.</i> -->
