--- a/Recruiter/index.html
+++ b/Recruiter/index.html
@@ -62,11 +62,12 @@
     <div id="showNav">
         <button id="show">&#8801</button>
         <ul id="navBarForPhone">
-            <li><a href="../index.html" style="background-color : #e0b9ba;">Home</a></li>
-            <li><a href="#about" style="background-color : #e2a7a9;">About Me</a></li>
-            <li><a href="#projects" style="background-color : #e39a9c;">Projects</a></li>
-            <li><a href="#skills" style="background-color : #e78a8e;">Relevant Coursework</a></li>
-            <li><a href="#resume" style="background-color : #e27478;">Resumé</a></li>
+            <li><a href="../index.html" style="background-color : #eac6c7;">Home</a></li>
+            <li><a href="#about" style="background-color : #eab7b8;">About Me</a></li>
+            <li><a href="#projects" style="background-color : #eda7a9;">Projects</a></li>
+            <li><a href="#skills" style="background-color : #ec969a;">Relevant Coursework</a></li>
+            <li><a href="#resume" style="background-color : #ef8689;">Résumé</a></li>
+            <li><a href="#extraCurr" style="background-color : #e27478;">Extracurriculars</a></li>
         </ul>
     </div>
 
@@ -75,7 +76,8 @@
         <li><a href="#about">About Me</a></li>
         <li><a href="#projects">Projects</a></li>
         <li><a href="#skills">Relevant Coursework</a></li>
-        <li><a href="#resume">Resumé</a></li>
+        <li><a href="#resume">Résumé</a></li>
+        <li><a href="#extraCurr">Extracurriculars</a></li>
     </ul>
 
     <div id="container">
@@ -198,14 +200,23 @@
         </div>
         <hr />
         <div id="resume">
-            <h3>Resumé</h3>
+            <h3>Résumé</h3>
             <img id="resumeImg" src="Resume/Resume_preview.png">
             <div id="resumeHover" title="View my resumé">
                 <h5 style=" margin: 0 auto; background-color: #e2a7a9; color: black; padding: 1vw 0;" id="viewResume">
-                    View Resumé</h5>
+                    View Résumé</h5>
                 <img id="resumePreview" src="Resume/Resume_preview.png">
             </div>
         </div>
+
+
+        <hr />
+        <div id="extraCurr">
+            <h3>Extracurricular Activities</h3>
+            <img src="extracurriculars.png" id="extracurriculars">
+        </div>
+
+
         <hr />
         <div id="projects2">
             <h3>In case you're bored reviewing portfolios all day</h3>
@@ -230,7 +241,7 @@
         <h3 id="footerTitle">You can reach out<br />to me via</h3>
         <div id="footerContainer">
             <div id="gmail" style="max-width: fit-content;"><a id="goToGmail"><img id="gmailImg" src="gmail.png"
-                        title="Send me an e-mail"></a></div>
+                        title="Copy e-mail ID"></a></div>
             <div id="linkedIn" style="max-width: fit-content;"><img id="linkedInImg" src="linkedIn.png"
                     title="View my LinkedIn profile">
             </div>
