--- a/Student/index.html
+++ b/Student/index.html
@@ -15,26 +15,31 @@
         h5 {
             max-width: 100%;
             text-align: center;
-            background-color: rgba(255, 255, 255, 0.57);
+            background-color: #535353;
+            color: rgb(241, 241, 241);
         }
 
         .otherPage {
             width: max-content;
             padding: 0;
-            background-color: white;
+            /* background-color: rgba(255, 255, 255, 0.482); */
+            background-color: #6a6a6a;
             border: 0;
             text-decoration: underline;
-            color: rgb(82, 36, 208);
+            /* color: rgb(147, 212, 255); */
+            color: rgb(241, 246, 143);
             margin: 0.3vw 0;
         }
 
         .otherPage:hover {
-            color: rgb(0, 105, 225);
+            color: rgb(192, 193, 255);
             cursor: pointer;
+            transition: 0.3s;
+            font-size: medium;
         }
 
         .otherPage:focus {
-            color: red;
+            color: rgb(255, 93, 93);
         }
 
         @keyframes appear {
@@ -222,12 +227,14 @@
                 </div>
             </div>
 
-            <h5 style="margin: 0 auto; padding: 4vw; font-weight: 200;">
-                <big>Check these out</big><br />
-                1) <button title="Go to Recruiter page" class="otherPage"
-                    onclick="otherPage('../Recruiter/index.html')">'Recruiter'</button> page   
-                2) <button title="Go to Other page" class="otherPage"
-                    onclick="otherPage('../Other/index.html')">'Other'</button> page
+            <h5 style="margin: 0 auto; padding: 2.5vw; font-weight: 200;">
+                <div>
+                    <big>Check these out</big><br />
+                    1) <button title="Go to Recruiter page" class="otherPage"
+                        onclick="otherPage('../Recruiter/index.html')">'Recruiter'</button> page   
+                    2) <button title="Go to Other page" class="otherPage"
+                        onclick="otherPage('../Other/index.html')">'Other'</button> page
+                </div>
             </h5>
         </div>
     </div>
