--- a/Other/index.html
+++ b/Other/index.html
@@ -86,17 +86,11 @@
         </div>
 
         <div id="contact">
-            <h2 id="contactTitle">What brought you to my portfolio website?</h2>
+            <h2 id="contactTitle">What brought you to my<br />portfolio website?</h2>
 
-            <!-- <div id="fallingLettersLeft">
-                <h3>Algorithms</h3>
-                <h3>C</h3>
-                <h3>Programming</h3>
-                <h3>AI</h3>
-                <h3>ML</h3>
-                <h3>Data Science</h3>
-                <h3>Java</h3>
-            </div> -->
+            <video autoplay loop id="contactVid">
+                <source src="contactVideo.mp4">
+            </video>
 
             <p id="contactPara">
                 Have anything tech-related to talk about?<br />
