--- a/Student/index.html
+++ b/Student/index.html
@@ -25,7 +25,7 @@
             /* background-color: rgba(255, 255, 255, 0.482); */
             background-color: #6a6a6a;
             border: 0;
-            text-decoration: underline;
+            /* text-decoration: underline; */
             /* color: rgb(147, 212, 255); */
             color: rgb(241, 246, 143);
             margin: 0.3vw 0;
