--- a/Other/index.html
+++ b/Other/index.html
@@ -88,7 +88,7 @@
         <div id="contact">
             <h2 id="contactTitle">What brought you to my<br />portfolio website?</h2>
 
-            <video autoplay loop id="contactVid">
+            <video autoplay loop id="contactVid" muted>
                 <source src="contactVideo.mp4">
             </video>
 
